Fixed wrapping for social media links

--- a/site.css
+++ b/site.css
@@ -11,9 +11,14 @@ p {
     color: #93b7be;
 }
 a {
+    color: #93b7be;
+    text-decoration: none;
+}
+a:hover {
     color: #d4f5f5;
     text-decoration: none;
 }
+
 hr {
     border-color: #8c9a9e;
 }
@@ -35,6 +40,10 @@ hr {
     border-radius: 10px;
     outline: #8c9a9e solid 1px;
     font-size: 20px;
+}
+
+.nowrap {
+    white-space: nowrap;
 }
 
 #about {
